# POC_CLIENTES

./: .env  README.md  db.py  db_hana.py  duckdb.py  get_data.py  pyproject.toml
